syntax = "proto3";

package google.protobuf;

import "google/protobuf/timestamp.proto";

message PersistSubmittedTransaction {
  string orchestration_instance_id = 1;
  string metering_point_id = 2;
  string transaction_id = 3;
  Timestamp registration = 4;
  MeteringPointType metering_point_type = 5;
  Unit unit = 6;
  Resolution resolution = 7;
  Timestamp start = 8;
  Timestamp end = 9;
  repeated Point points = 10;
}

message Point {
  int32 position = 1;
  double quantity = 2;
  Quality quality = 3;
}

enum Quality {
  QUALITY_UNSPECIFIED = 0;
  QUALITY_MISSING = 1;
  QUALITY_ESTIMATED = 2;
  QUALITY_MEASURED = 3;
  QUALITY_CALCULATED = 4;
}

enum MeteringPointType {
  METERING_POINT_TYPE_UNSPECIFIED = 0;
  CONSUMPTION = 1;
  PRODUCTION = 2;
  EXCHANGE = 3;
  VE_PRODUCTION = 4;
  ANALYSIS = 5;
  NOT_USED = 6;
  SURPLUS_PRODUCTION_GROUP_6 = 7;
  NET_PRODUCTION = 8;
  SUPPLY_TO_GRID = 9;
  CONSUMPTION_FROM_GRID = 10;
  WHOLESALE_SERVICES_INFORMATION = 11;
  OWN_PRODUCTION = 12;
  NET_FROM_GRID = 13;
  NET_TO_GRID = 14;
  TOTAL_CONSUMPTION = 15;
  NET_LOSS_CORRECTION = 16;
  ELECTRICAL_HEATING = 17;
  NET_CONSUMPTION = 18;
  OTHER_CONSUMPTION = 19;
  OTHER_PRODUCTION = 20;
  EFFECT_PAYMENT = 21;
  EXCHANGE_REACTIVE_ENERGY = 22;
  COLLECTIVE_NET_PRODUCTION = 23;
  COLLECTIVE_NET_CONSUMPTION = 24;
}

enum Unit {
  QUANTITY_UNIT_UNSPECIFIED = 0;
  QUANTITY_UNIT_KWH = 1;
  QUANTITY_UNIT_MWH = 2;
  QUANTITY_UNIT_MVARH = 3;
  QUANTITY_UNIT_KVARH = 4;
  QUANTITY_UNIT_KW = 5;
  QUANTITY_UNIT_T = 6;
  QUANTITY_UNIT_K3 = 7;
}

enum Resolution {
  RESOLUTION_UNSPECIFIED = 0;
  RESOLUTION_PT15M = 1;
  RESOLUTION_PT1H = 2;
}
